# media-converter

./: com.example.MediaConverter.json  meson.build
data/: com.example.MediaConverter.appdata.xml.in  com.example.MediaConverter.desktop.in  com.example.MediaConverter.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  media-converter.in  media_converter.gresource.xml  meson.build  window.py  window.ui
